# EgoSim

./: .gitignore  README.md  pyproject.toml  replicate.md  requirements.txt  run.sh
baseline/EgoHOI/: .gitignore  README.md  infer.py  inference.py  requirements.txt  run.sh  run_original.sh
baseline/Mask2IV/: .gitignore  LICENSE  README.md  inference.py  run.sh
baseline/Wan2.1-Fun-14B-InP/: example.py  inference.py  run.sh
baseline/data/: __init__.py  agibot.py  continuous.py  schema.py
data_process/: README.md  requirements_da3_freeze.txt  requirements_hamer_freeze.txt  requirements_sam3_freeze.txt  run_pipeline.env.sh  run_step00_convert.sh
data_process/00_first_frame_mask_inpaint/: run_step00a_sam_seg.sh  run_step00b_inpaint.sh  sam_seg.py  wanx_inpaint.py
data_process/01_depth_pose_da3/: camera_trajectory_render_pyrender.py  process_depth_inpainted.py  render_16fps_aligned.py  run_render_16fps_example.sh  run_step01a_da3_predict.sh  run_step01b_smooth.sh  run_step01c_depth_inpainted.sh  run_step01d_render.sh  run_step01d_render_mask.sh  smooth_camera_kalman_egovid.py
data_process/02_mano_predict/: egovid_annotate_batch.py  filter_lightweight_duplicates.py  reconstruct_full_mano.py  run_step02a_mano.sh  run_step02b_filter.sh  run_step02c_reconstruct_full.sh  run_step02d_visualize_skeleton.sh  visualize_skeleton.py
data_process/03_caption/: caption_video.py  generate_metadata.py  run_step03_caption.sh  run_step04_metadata.sh
data_process/ORV_process/: README.md  gs_render.py  (+3 more)
dev/: test.py
diffsynth/: __init__.py
tests/: validate_inference.py
(+98 files in other folders)
