[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "egosim"
version = "0.1.0"
description = "EgoSim: Egocentric World Model for hand-object interaction video generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "safetensors>=0.4.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "einops>=0.7.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.4.9",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "ftfy>=6.1.0",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["egowm*", "diffsynth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
